Made Curse Dark even darker. Added a visible border to the sidebar. Fixed background color for editing messages.

--- a/scss/themes/_curse-dark.scss
+++ b/scss/themes/_curse-dark.scss
@@ -28,14 +28,14 @@ $slate-grey: #55565A;
 $cool-grey: #7F828C;
 
 // Theme Colors
-$color-base: $slate-grey;
-$color-highlight: $cool-grey;
+$color-base: #1d2027;
+$color-highlight: #2a2f39;
 
-$color-shade-darkest: #1d2027;
-$color-shade-dark: #2a2f39;
-$color-shade-mid: #454c5c;
-$color-shade-light: #6b6f79;
-$color-shade-lightest: #858991;
+$color-shade-darkest: #111111;
+$color-shade-dark: #1d2027;
+$color-shade-mid: #2a2f39;
+$color-shade-light: #454c5c;
+$color-shade-lightest: #6b6f79;
 
 // Font Colors
 $base-font-color: $orange;
